--- a/shah/translations/fr_FR.json
+++ b/shah/translations/fr_FR.json
@@ -104,7 +104,7 @@
   "2idJzM": "L'icône Metamask est située en haut à droite de la barre d'outils de votre navigateur.",
   "32hLtQ": "Toutes nos félicitations! Vous pouvez désormais envoyer des messages aux autres utilisateurs sur Origin et rester à jour de tous vos achats et ventes.",
   "AACIs": "Vous avez terminé et vous pouvez continuer en appuyant sur le bouton ci-dessous.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Campagne de janvier 2019",
     "growth.jan2019.short_name": "Jan 2019",
     "growth.feb2019.name": "Campagne de février 2019",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "Décembre 2019",
     "growth.jan2020.name": "Campagne de janvier 2020",
     "growth.jan2020.short_name": "Janvier 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "Email vérifié et profile sur Origin",
     "growth.two.attestations.requirement": "Trois vérifications de profil",
     "growth.three.attestations.requirement": "Quatre vérifications de profil",
@@ -680,10 +681,10 @@
   "4FezaJ": "Jetons gagnés",
   "2haWvO": "Gains Totaux",
   "1YUe0g": "Total gagné",
-  "uKsWN": "Campaign Ended",
-  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
-  "1CZFEM": "Read our {blog post}.",
-  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
+  "uKsWN": "Campagne terminée",
+  "4fO8ds": "Le budget alloué à cette campagne a été atteint. Vous ne pouvez plus gagner de jetons avec cette campagne.",
+  "1CZFEM": "Lisez notre {blog post}.",
+  "3xu4iO": "Pour obtenir les dernières actualités d'Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Aucune campagne détectée",
   "3Dcwum": "Origin Marketplace a été installé",
   "Nuz99": "Références partenaires",
@@ -748,16 +749,13 @@
   "18RyVa": "Renforcez votre profil et gagnez des jetons Origin en complétant toutes les vérifications.",
   "wp2vP": "Terminé",
   "vVUtP": "Bienvenue dans le protocole d'origine",
-  "2rolpt": "Rejoignez Origin Rewards pour gagner",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Votre ami {name} vous a invité à gagner",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Jetons Origin",
   "45NvfT": "S'inscrire maintenant",
-  "4ox9Sb": "Commencez par télécharger Origin Marketplace - l'application qui vous permet d'acheter et de vendre n'importe quoi en utilisant la cryptographie directement depuis votre téléphone.",
-  "1EEJqF": "Scannez pour installer notre application",
-  "VIbSQ": "ou",
-  "3LJKn0": "Récompenses pour PC de bureau",
-  "q02iR": "Que sont les récompenses Origin ?",
-  "EGUu4": "OGN est une crypto-monnaie de récompense gagnée par les utilisateurs d'Origin. Gagnez des récompenses lorsque vous vérifiez votre compte ou invitez vos amis à rejoindre Origin. Obtenez même OGN comme remise en argent lorsque vous achetez et vendez.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Récompenses Origin",
   "3gLqI4": "Rejoindre Campagne",
   "PhK4s": "Conditions des récompenses Origin",
@@ -769,7 +767,7 @@
   "1R5Tqk": "Accepter les termes",
   "4DsgoB": "Inscrivez-vous à Origin Rewards",
   "1oOkt7": "Rejoignez le programme de récompenses Origin pour gagner des jetons Origin (OGN). Des termes et conditions s'appliquent.",
-  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
+  "VWMI": "Les OGN gagnés seront distribués à la fin de chaque campagne, comme déterminé par Origin.",
   "4weJUD": "En rejoignant le programme de récompenses Origin, vous acceptez de ne pas transférer ou vendre les futurs jetons Origin que vous gagnerez pendant minimum 1 an après avoir gagné ces jetons.",
   "4vRJSg": "Les OGN sont émis dans le cadre d’une transaction initialement exempte d’enregistrement en vertu du US Securities Act of 1933, tel que modifié (le «Securities Act»), et ne peuvent être transférés aux États-Unis à un compte américain, ni pour le compte ou au profit de ceux-ci. personne, sauf en vertu d’une exemption possible des exigences d’inscription de la Securities Act et de toutes les lois applicables sur les valeurs mobilières des États. Les termes utilisés ci-dessus ont la signification qui leur est donnée dans le règlement S de la loi sur les valeurs mobilières et dans toutes les lois et tous les règlements applicables.",
   "1oPDxX": "Je ne suis pas citoyen ou résidant des États-Unis d'Amérique",
@@ -998,6 +996,7 @@
   "CIXm3": "Vous n'avez pas encore ouvert de conversation avec cet utilisateur",
   "PESUQ": "Fermer",
   "1d5eDn": "Ecrivez quelque chose...",
+  "1bFDvA": "Sending...",
   "K46gs": "Envoyer",
   "349RB": "Connecté à",
   "4j25sQ": "Portefeuille actif",
