--- a/shah/translations/it_IT.json
+++ b/shah/translations/it_IT.json
@@ -104,7 +104,7 @@
   "2idJzM": "L'icona Metamask si trova in alto a destra nella barra degli strumenti del browser.",
   "32hLtQ": "Congratulazioni! Ora puoi inviare messaggi ad altri utenti su Origin e rimanere aggiornato su tutti i tuoi acquisti e vendite.",
   "AACIs": "Hai finito e puoi continuare premendo il pulsante qui sotto.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Campagna di Gennaio 2019",
     "growth.jan2019.short_name": "Gen 2019",
     "growth.feb2019.name": "Campagna di Febbraio 2019",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "Dicembre 2019",
     "growth.jan2020.name": "Campagna di Gennaio 2020",
     "growth.jan2020.short_name": "Gennaio 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "Email e profilo Origin verificati",
     "growth.two.attestations.requirement": "Tre verifiche del profilo",
     "growth.three.attestations.requirement": "Quattro verifiche del profilo",
@@ -748,16 +749,13 @@
   "18RyVa": "Rafforza il tuo profilo e guadagna i token di Origin completando le verifiche.",
   "wp2vP": "Completato",
   "vVUtP": "Benvenuto in Origin Protocol",
-  "2rolpt": "Unisciti a Origin Rewards per guadagnare",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Hai ricevuto un invito da {name} a guadagnare",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "i Token di Origin",
   "45NvfT": "Iscriviti ora",
-  "4ox9Sb": "Inizia scaricando Origin Marketplace, l'app che ti consente di acquistare e vendere qualsiasi cosa usando cripto direttamente dal tuo telefono.",
-  "1EEJqF": "Scansiona per installare la nostra app",
-  "VIbSQ": "o",
-  "3LJKn0": "Inizia a Guadagnare dal Desktop",
-  "q02iR": "Cosa sono gli Origin Rewards?",
-  "EGUu4": "L'OGN è una criptovaluta data come premio agli utenti Origin. Guadagna premi quando verifichi il tuo account o inviti i tuoi amici a unirsi a Origin. E' possibile ottenere OGN anche come cashback quando acquisti e vendi.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Origin Rewards",
   "3gLqI4": "Partecipa alla Campagna",
   "PhK4s": "Termini dei premi Origin",
@@ -769,7 +767,7 @@
   "1R5Tqk": "Accetta i termini",
   "4DsgoB": "Iscriviti per i premi Origin",
   "1oOkt7": "Unisciti al programma di ricompensa di Origin per guadagnare token di Origin (OGN). Si applicano i termini e condizioni.",
-  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
+  "VWMI": "Gli OGN guadagnati saranno distribuiti alla fine di ogni campagna a discrezione di Origin.",
   "4weJUD": "Partecipando al programma di premi Origin, l'utente accetta che non trasferirà o venderà i futuri gettoni Origin guadagnati ad altri per almeno 1 anno dalla data di conseguimento dei token.",
   "4vRJSg": "L'OGN è stato emesso in una transazione originariamente esentata dalla registrazione ai sensi del Securities Act statunitense del 1933, come modificato (il \"Securities Act\"), e non può essere trasferita negli Stati Uniti a, o per conto o beneficio di, qualsiasi persona US esclusa in virtù di un'esenzione disponibile dai requisiti di registrazione della Legge sui valori mobiliari e tutte le leggi applicabili sui titoli di Stato. I termini usati in precedenza hanno il significato loro attribuito nella Regulation S ai sensi della Securities Act e tutte le leggi e i regolamenti applicabili.",
   "1oPDxX": "Non sono cittadino o residente negli Stati Uniti d'America",
@@ -998,6 +996,7 @@
   "CIXm3": "Non hai iniziato una conversazione con questo utente",
   "PESUQ": "Vicino",
   "1d5eDn": "Scrivi qui...",
+  "1bFDvA": "Sending...",
   "K46gs": "Invia",
   "349RB": "Collegato al",
   "4j25sQ": "Portafoglio attivo",
