--- a/shah/translations/ja_JP.json
+++ b/shah/translations/ja_JP.json
@@ -104,7 +104,7 @@
   "2idJzM": "メタマスクアイコンは、ブラウザのツールバーの右上にあります。",
   "32hLtQ": "おめでとうございます。 Originのユーザーへメッセージを送る事ができるようになりました。取引に関する情報も最新にキープされます。",
   "AACIs": "下のボタンを押すと完了です。",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "2019年1月キャンペーン",
     "growth.jan2019.short_name": "2019年1月",
     "growth.feb2019.name": "2019年2月キャンペーン",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "確認済みのメールアドレスとOriginのプロフィール",
     "growth.two.attestations.requirement": "3つのプロファイル検証",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "認証を完了することで、プロフィールを強化し、OGN Tokenを獲得できます。",
   "wp2vP": "完了",
   "vVUtP": "Originプロトコルへようこそ",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Origin報酬",
   "3gLqI4": "キャンペーンに参加する",
   "PhK4s": "Origin報酬規約",
@@ -998,6 +996,7 @@
   "CIXm3": "このユーザーとの会話は開始していません",
   "PESUQ": "閉じる",
   "1d5eDn": "何か入力してください。",
+  "1bFDvA": "Sending...",
   "K46gs": "送信",
   "349RB": "に接続されています",
   "4j25sQ": "アクティブウォレット",
