--- a/shah/translations/ko_KR.json
+++ b/shah/translations/ko_KR.json
@@ -104,7 +104,7 @@
   "2idJzM": "메타마스크(Metamask) 아이콘은 브라우저 도구 모음의 오른쪽 위에 있습니다.",
   "32hLtQ": "축하드립니다! 이제 당신은 오리진(Origin) 에서 다른 사용자에게 메시지를 보내고 모든 구매 및 판매에 대한 최신정보를 얻을수 있습니다.",
   "AACIs": "완료 되었으며 이제 아래 버튼을 눌러 계속 진행해 주세요.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "2019 년 1 월 캠페인",
     "growth.jan2019.short_name": "2019 년 1 월",
     "growth.feb2019.name": "2019 년 2 월 캠페인",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "인증된 이메일 및 오리진 프로필",
     "growth.two.attestations.requirement": "세개의 프로필 인증",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "당신의 프로필을 더 채우고 인증을 완료하여 오리진 토큰을 얻으세요",
   "wp2vP": "완료",
   "vVUtP": "오리진 프로토콜(Origin Protocol) 에 오신 것을 환영합니다.",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "오리진 리워드",
   "3gLqI4": "캠페인 참여하기",
   "PhK4s": "오리진 티워드 약관",
@@ -998,6 +996,7 @@
   "CIXm3": "당신은 이 사용자와 대화를 시작하지 않았습니다",
   "PESUQ": "닫기",
   "1d5eDn": "무언가 입력 해보세요...",
+  "1bFDvA": "Sending...",
   "K46gs": "보내기",
   "349RB": "에 연결됨",
   "4j25sQ": "지갑 활성화",
