--- a/shah/translations/ro_RO.json
+++ b/shah/translations/ro_RO.json
@@ -104,7 +104,7 @@
   "2idJzM": "Pictograma Metamask este situată în partea din dreapta sus a barei de instrumente a browserului.",
   "32hLtQ": "Felicitări! Acum puteți trimite altor utilizatori mesaje de origine și să fiți la curent cu toate achizițiile și vânzările.",
   "AACIs": "Ați terminat și puteți continua apăsând butonul de mai jos.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Ianuarie 2019 Campanie",
     "growth.jan2019.short_name": "Jan 2019",
     "growth.feb2019.name": "Campania din februarie 2019",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "E-mail verificat și profil de origine",
     "growth.two.attestations.requirement": "Trei verificări de profil",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "Consolidă-ți profilul și câștigă jetoane de origine prin completarea verificărilor.",
   "wp2vP": "terminat",
   "vVUtP": "Bun venit la Protocolul de origine",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Recompense de origine",
   "3gLqI4": "Alăturați-vă campaniei",
   "PhK4s": "Termeni de recompense de origine",
@@ -998,6 +996,7 @@
   "CIXm3": "Nu ați început o conversație cu acest utilizator",
   "PESUQ": "Închide",
   "1d5eDn": "Scrie ceva...",
+  "1bFDvA": "Sending...",
   "K46gs": "Trimite",
   "349RB": "Conectat la",
   "4j25sQ": "Portofel activ",
