--- a/shah/translations/ru_RU.json
+++ b/shah/translations/ru_RU.json
@@ -104,7 +104,7 @@
   "2idJzM": "Значок метамаски находится в правом верхнем углу панели инструментов вашего браузера.",
   "32hLtQ": "Поздравляем! Теперь вы можете отправлять сообщения другим пользователям в Origin и получать информацию обо всех ваших покупках и продажах.",
   "AACIs": "Вы сделали и можете продолжить, нажав кнопку ниже.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Январь 2019 Кампания",
     "growth.jan2019.short_name": "Январь 2019",
     "growth.feb2019.name": "Февраль 2019 Кампания",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "Декабрь 2019",
     "growth.jan2020.name": "Кампания Январь 2020",
     "growth.jan2020.short_name": "Январь 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "Подтвержденный адрес электронной почты и Происхождение",
     "growth.two.attestations.requirement": "Верификация трех профилей",
     "growth.three.attestations.requirement": "Верификация четырех профилей",
@@ -748,16 +749,13 @@
   "18RyVa": "Защитите свой профиль и заработайте токены Origin, пройдя верификации.",
   "wp2vP": "Завершено",
   "vVUtP": "Добро пожаловать в протокол происхождения",
-  "2rolpt": "Присоединяйтесь к Origin Rewards, чтобы зарабатывать",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Ваш друг {name} пригласил вас зарабатывать",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Токены Origin",
   "45NvfT": "Зарегистрироваться сейчас",
-  "4ox9Sb": "Начните с загрузки Origin Marketplace - приложения, которое позволяет вам покупать и продавать все, что угодно, используя криптовалюту прямо с вашего телефона.",
-  "1EEJqF": "Сканируйье, для установки нашего приложения",
-  "VIbSQ": "или",
-  "3LJKn0": "Заработай с компьютера",
-  "q02iR": "Что такое Origin Rewards?",
-  "EGUu4": "OGN-это бонусная криптовалюта, заработанная пользователями Origin. Получайте награды, когда вы подтверждаете свою учетную запись или приглашаете своих друзей присоединиться к Origin. Даже получайте OGN в качестве кэшбэка, когда вы покупаете и продаете.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Origin Rewards",
   "3gLqI4": "Присоединиться к кампании",
   "PhK4s": "Условия Origin Rewards",
@@ -769,7 +767,7 @@
   "1R5Tqk": "Принять условия",
   "4DsgoB": "Зарегистрироваться в Origin Rewards",
   "1oOkt7": "Присоединяйтесь к программе вознаграждений Origin, чтобы зарабатывать токены Origin (OGN). Принять условия.",
-  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
+  "VWMI": "Заработанные OGN будут распределяться в конце каждой кампании по усмотрению Origin.",
   "4weJUD": "Присоединяясь к программе Origin Reward, вы соглашаетесь с тем, что не будете передавать или продавать будущие заработанные токены Origin третьим лицам в течение как минимум 1 года с даты их получения.",
   "4vRJSg": "OGN выдаются в транзакции, первоначально освобожденной от регистрации в соответствии с Законом США о ценных бумагах 1933 года с внесенными в него поправками («Закон о ценных бумагах»), и не могут быть переведены в Соединенных Штатах или за счет или в пользу любого гражданина США, за исключением случаев возможного освобождения от регистрации требований Закона о ценных бумагах и всех применимых государственных законов о ценных бумагах. Термины, использованные выше, имеют значения, данные им в Положении S Закона о ценных бумагах и всех применимых законов и нормативных актов.",
   "1oPDxX": "Я не являюсь гражданином или резидентом Соединенных Штатов Америки",
@@ -998,6 +996,7 @@
   "CIXm3": "У вас еще нет сообщений с этим пользователем",
   "PESUQ": "близко",
   "1d5eDn": "Начните печатать...",
+  "1bFDvA": "Sending...",
   "K46gs": "Отправить",
   "349RB": "Соединен с",
   "4j25sQ": "Активный кошелек",
