--- a/shah/translations/vi_VN.json
+++ b/shah/translations/vi_VN.json
@@ -104,7 +104,7 @@
   "2idJzM": "Biểu tượng Metamask nằm ở phía trên bên phải của thanh công cụ trình duyệt của bạn.",
   "32hLtQ": "Xin chúc mừng! Bây giờ bạn có thể nhắn tin cho những người dùng khác trên Origin và cập nhật tất cả các giao dịch mua và bán của bạn.",
   "AACIs": "Bạn đã hoàn thành và có thể tiếp tục bằng cách nhấn nút bên dưới.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Chiến dịch tháng 1 năm 2019",
     "growth.jan2019.short_name": "Tháng 1 năm 2019",
     "growth.feb2019.name": "Chiến dịch tháng 2 năm 2019",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "Email được xác minh và hồ sơ gốc",
     "growth.two.attestations.requirement": "Ba xác minh hồ sơ",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "Tăng cường hồ sơ của bạn và kiếm Token gốc bằng cách hoàn thành xác minh.",
   "wp2vP": "Đã hoàn thành",
   "vVUtP": "Chào mừng bạn đến với Giao thức gốc",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Phần thưởng xuất xứ",
   "3gLqI4": "Tham gia chiến dịch",
   "PhK4s": "Điều khoản phần thưởng xuất xứ",
@@ -998,6 +996,7 @@
   "CIXm3": "Bạn chưa bắt đầu cuộc trò chuyện với người dùng này",
   "PESUQ": "Gần",
   "1d5eDn": "Viết điều gì đó...",
+  "1bFDvA": "Sending...",
   "K46gs": "Gửi",
   "349RB": "Kết nối với",
   "4j25sQ": "Ví hoạt động",
