--- a/shah/translations/zh_TW.json
+++ b/shah/translations/zh_TW.json
@@ -1,17 +1,17 @@
 {
-  "4yVU8h": "Congratulations!",
+  "4yVU8h": "恭喜啦!",
   "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
   "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
   "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
   "3Hxe9H": "Collect OGN",
-  "iQsez": "Earn OGN",
+  "iQsez": "賺取OGN",
   "1IZ5ov": "好",
   "yzJlS": "ETH地址",
   "1SGynn": "聯繫 {role}",
   "1FAmA3": "評論",
   "2gtpRD": "帳戶結餘",
   "369PK3": "獲得更多",
-  "2L5Kd2": "Booked",
+  "2L5Kd2": "已预定",
   "3esZCn": {
     "schema.forSale": "出售中",
     "schema.forRent": "出租",
@@ -104,7 +104,7 @@
   "2idJzM": "Metamask圖標位於瀏覽器工具欄的右上角。",
   "32hLtQ": "恭喜！您現在可以在Origin上向其他用戶發送消息，並及時了解您的所有購買和銷售情況。",
   "AACIs": "您已完成，可以按下面的按鈕繼續。",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "2019年1月運動",
     "growth.jan2019.short_name": "2019年1月",
     "growth.feb2019.name": "2019年2月運動",
@@ -127,13 +127,14 @@
     "growth.oct2019.short_name": "2019年十月",
     "growth.nov2019.name": "2019年11月活動",
     "growth.nov2019.short_name": "2019年十一月",
-    "growth.dec2019.name": "December 2019 Campaign",
-    "growth.dec2019.short_name": "December 2019",
-    "growth.jan2020.name": "January 2020 Campaign",
-    "growth.jan2020.short_name": "January 2020",
+    "growth.dec2019.name": "2019年12月活动",
+    "growth.dec2019.short_name": "2019年12月",
+    "growth.jan2020.name": "2020年1月活动",
+    "growth.jan2020.short_name": "2020年1月",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "已驗證的電子郵件和原始資",
     "growth.two.attestations.requirement": "三份個人資料驗證",
-    "growth.three.attestations.requirement": "Four profile verifications",
+    "growth.three.attestations.requirement": "四项身份验证",
     "growth.profile.requirement": "個人資料名稱和照片",
     "growth.email.requirement": "已驗證電郵",
     "growth.attestation.requirement.twitterAttestation": "Twitter證明",
@@ -323,18 +324,18 @@
     "growth.share.content30.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
     "growth.share.content30.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
     "growth.share.content30.link": "觀看視頻",
-    "growth.share.content31.title": "The Future of the Sharing Economy",
+    "growth.share.content31.title": "共享经济的未来",
     "growth.share.content31.details": "Origin is building the future of the sharing economy.",
     "growth.share.content31.link": "觀看視頻",
     "growth.share.content32.title": "Follow Origin on Blockfolio Signal!",
     "growth.share.content32.details": "Follow Origin on Blockfolio and receive the latest news updates and OGN airdrops from Origin's core team. ",
-    "growth.share.content32.link": "Follow Origin",
+    "growth.share.content32.link": "关注Origin",
     "growth.share.content33.title": "加入Origin的電報並獲得OGN",
     "growth.share.content33.details": "Follow Origin on Telegram and earn Origin Tokens (OGN)!",
-    "growth.share.content33.link": "Follow Origin",
+    "growth.share.content33.link": "关注Origin",
     "growth.share.content34.title": "Creating the New Sharing Economy",
     "growth.share.content34.details": "Origin在以太坊主網上建立了去中心市場協議，該協議取代了中間商並通過智能合約將買賣雙方聯繫起來。",
-    "growth.share.content34.link": "Follow Origin"
+    "growth.share.content34.link": "关注Origin"
   },
   "3eD99i": "確認你的郵件地址",
   "1hBrwm": "將姓名和照片添加到個人資料",
@@ -680,14 +681,14 @@
   "4FezaJ": "代幣賺了",
   "2haWvO": "總收入",
   "1YUe0g": "總收入",
-  "uKsWN": "Campaign Ended",
+  "uKsWN": "活动已结束",
   "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
-  "1CZFEM": "Read our {blog post}.",
+  "1CZFEM": "阅读我们的{blog post}",
   "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "未檢測到廣告活動",
-  "3Dcwum": "Origin Marketplace installed",
+  "3Dcwum": "已安裝Origin Marketplace",
   "Nuz99": "Partner Referral",
-  "acQDS": "Completed",
+  "acQDS": "已完成",
   "2JJkHr": "您獲得了 {amount} OGN",
   "1dhANo": "跟隨起源",
   "1RMzAE": "返回戰役",
@@ -697,7 +698,7 @@
   "1gCRzk": "加入Origin並獲得Origin加密貨幣令牌（OGN）。 Origin是一個與其他用戶一起買賣的新市場。在您創建個人資料，邀請您的朋友以及在市場上買賣時賺取原始代幣。",
   "1URGr": "Invite with Your Link",
   "1JZLkm": "Send a friend your unique invitation link.",
-  "2FPhdN": "Copy Link",
+  "2FPhdN": "复制链接",
   "1IIvYE": "複製",
   "20US5L": "複製",
   "3yCrcG": "分享或推文",
@@ -748,16 +749,13 @@
   "18RyVa": "通過完成驗證來增強您的個人資料並獲得Origin Token。",
   "wp2vP": "已完成",
   "vVUtP": "歡迎來到Origin Protocol",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "起源獎勵",
   "3gLqI4": "加入競選",
   "PhK4s": "起源獎勵條款",
@@ -998,6 +996,7 @@
   "CIXm3": "您尚未開始與此用戶的對話",
   "PESUQ": "關",
   "1d5eDn": "輸入一些東西...",
+  "1bFDvA": "Sending...",
   "K46gs": "發送",
   "349RB": "連接到",
   "4j25sQ": "活躍錢包",
