--- a/shah/translations/de_DE.json
+++ b/shah/translations/de_DE.json
@@ -104,7 +104,7 @@
   "2idJzM": "Das Metamask-Symbol befindet sich oben rechts in der Symbolleiste Ihres Browsers.",
   "32hLtQ": "Herzliche Glückwünsche! Sie können jetzt anderen Benutzern bei Origin eine Nachricht senden und über alle Ihre Einkäufe und Verkäufe auf dem Laufenden bleiben.",
   "AACIs": "Sie sind fertig und können fortfahren, indem Sie die Taste unten drücken.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Januar 2019 Kampagne",
     "growth.jan2019.short_name": "Januar 2019",
     "growth.feb2019.name": "Februar 2019 Kampagne",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "Bestätigte E-Mail- und Origin-Profile",
     "growth.two.attestations.requirement": "Drei Profilüberprüfungen",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "Stärken Sie Ihr Profil und verdienen Sie Origin-Token, indem Sie Überprüfungen durchführen.",
   "wp2vP": "Vollendet, fertiggestellt",
   "vVUtP": "Willkommen beim Origin-Protokoll",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Origin-Belohnungen",
   "3gLqI4": "Kampagne beitreten",
   "PhK4s": "Origin Rewards-Bedingungen",
@@ -998,6 +996,7 @@
   "CIXm3": "Sie haben keine Konversation mit diesem Benutzer gestartet",
   "PESUQ": "Schließen",
   "1d5eDn": "Schreibe etwas...",
+  "1bFDvA": "Sending...",
   "K46gs": "Senden",
   "349RB": "Verbunden",
   "4j25sQ": "Aktive Geldbörse",
