--- a/shah/translations/el_GR.json
+++ b/shah/translations/el_GR.json
@@ -104,7 +104,7 @@
   "2idJzM": "Το εικονίδιο Metamask βρίσκεται στο επάνω δεξιό μέρος της γραμμής εργαλείων του προγράμματος περιήγησης.",
   "32hLtQ": "Συγχαρητήρια! Τώρα μπορείτε να ενημερώσετε άλλους χρήστες για την Προέλευση και να είστε ενήμεροι με όλες τις αγορές και τις πωλήσεις σας.",
   "AACIs": "Έχετε τελειώσει και μπορείτε να συνεχίσετε πιέζοντας το παρακάτω κουμπί.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Ιανουάριος 2019 Εκστρατεία",
     "growth.jan2019.short_name": "Ιαν 2019",
     "growth.feb2019.name": "Φεβρουάριος 2019 Εκστρατεία",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "Επαληθευμένο προφίλ email και προέλευσης",
     "growth.two.attestations.requirement": "Τρεις επαληθεύσεις προφίλ",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "Ενισχύστε το προφίλ σας και κερδίστε τα Αναγνωριστικά προέλευσης συμπληρώνοντας τις επαληθεύσεις.",
   "wp2vP": "Ολοκληρώθηκε το",
   "vVUtP": "Καλώς ορίσατε στο πρωτόκολλο προέλευσης",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Αρχικές ανταμοιβές",
   "3gLqI4": "Συμμετοχή σε καμπάνια",
   "PhK4s": "Όροι ανταμοιβής προέλευσης",
@@ -998,6 +996,7 @@
   "CIXm3": "Δεν έχετε ξεκινήσει μια συνομιλία με αυτόν τον χρήστη",
   "PESUQ": "Κοντά",
   "1d5eDn": "Πληκτρολογήστε κάτι...",
+  "1bFDvA": "Sending...",
   "K46gs": "Αποστολή",
   "349RB": "Συνδεδεμένος με",
   "4j25sQ": "Ενεργό πορτοφόλι",
