--- a/shah/translations/es_ES.json
+++ b/shah/translations/es_ES.json
@@ -1,9 +1,9 @@
 {
   "4yVU8h": "¡Felicitaciones!",
-  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
-  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
-  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
-  "3Hxe9H": "Collect OGN",
+  "1ZxYLz": "Has creado exitosamente tu perfil. Estás listo para recolectar tus Tokens de Origin.",
+  "3EmcrW": "Has creado exitosamente tu perfil. Estás listo para recolectar tus Tokens de Origin.",
+  "3F5LRH": "Has creado exitosamente tu perfil. Estás listo para recolectar tus Tokens de Origin.",
+  "3Hxe9H": "Recolecta OGN",
   "iQsez": "Gana OGN",
   "1IZ5ov": "Ok",
   "yzJlS": "Dirección ETH",
@@ -11,7 +11,7 @@
   "1FAmA3": "Comentarios",
   "2gtpRD": "Saldo de la Cuenta",
   "369PK3": "Obtener más",
-  "2L5Kd2": "Booked",
+  "2L5Kd2": "Reservado",
   "3esZCn": {
     "schema.forSale": "En Venta",
     "schema.forRent": "En renta",
@@ -104,7 +104,7 @@
   "2idJzM": "El icono de Metamask se encuentra en la parte superior derecha de la barra de herramientas del navegador.",
   "32hLtQ": "¡Felicidades! Ahora puede enviar mensajes a otros usuarios en Origin y mantenerse al día con todas sus compras y ventas.",
   "AACIs": "Ya ha terminado y puede continuar presionando el botón de abajo.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Campaña de enero de 2019",
     "growth.jan2019.short_name": "Ene 2019",
     "growth.feb2019.name": "Campaña de febrero de 2019",
@@ -127,13 +127,14 @@
     "growth.oct2019.short_name": "Octubre de 2019",
     "growth.nov2019.name": "Campaña de noviembre de 2019",
     "growth.nov2019.short_name": "Noviembre 2019",
-    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.name": "Campaña de Diciembre 2019",
     "growth.dec2019.short_name": "Diciembre 2019",
-    "growth.jan2020.name": "January 2020 Campaign",
-    "growth.jan2020.short_name": "January 2020",
+    "growth.jan2020.name": "Camapaña de Enero 2020",
+    "growth.jan2020.short_name": "Enero 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "Correo electrónico verificado y perfil de origen",
     "growth.two.attestations.requirement": "Tres verificaciones de perfil",
-    "growth.three.attestations.requirement": "Four profile verifications",
+    "growth.three.attestations.requirement": "Cuarta verificación del perfil",
     "growth.profile.requirement": "Nombre de perfil y foto",
     "growth.email.requirement": "Correo electrónico verificado",
     "growth.attestation.requirement.twitterAttestation": "Certificado de Twitter",
@@ -293,48 +294,48 @@
     "growth.share.content20.title": "El fundador de CoinList habla sobre los mercados descentralizados del futuro",
     "growth.share.content20.details": "Andy Bromberg, cofundador y presidente de CoinList, analiza lo que piensa de Origin y nuestra visión a largo plazo.",
     "growth.share.content20.link": "Ver el vídeo",
-    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
-    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.title": "Construido en Origin: una alternativa descentralizada de Shopify",
+    "growth.share.content21.details": "Estamos orgullosos de anunciar la tienda de comercio electrónico Origin, una alternativa descentralizada de código abierto para Shopify, alojada completamente en IPFS.",
     "growth.share.content21.link": "Leer el artículo",
-    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
-    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.title": "Cómo un primer empleado de YouTube compite contra Uber y Airbnb",
+    "growth.share.content22.details": "Nuestro propio Matthew Liu conversa con Ahmed Al-Balaghi, cofundador de Encrypted Podcast.",
     "growth.share.content22.link": "Ver el vídeo",
-    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
-    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.title": "Anuncio de comisiones de origen para promover listados de vendedores con OGN",
+    "growth.share.content23.details": "Comisiones de Origin: una nueva forma para que los vendedores aumenten sus ventas y los desarrolladores y afiliados de DApp para ganar tokens de Origin.",
     "growth.share.content23.link": "Leer el artículo",
-    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
-    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.title": "Paul Veradittakit de Pantera Capital sobre cómo el Origin permite la libertad",
+    "growth.share.content24.details": "Oficial de coinversión en Pantera Capital.",
     "growth.share.content24.link": "Ver el vídeo",
-    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
-    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.title": "Joey Krug, cofundador de Augur, explica el valor del Origin",
+    "growth.share.content25.details": "Joey Krug, cofundador de Augur & Co-Inversionista Oficial en Pantera Capital, explica el valor de Origin.",
     "growth.share.content25.link": "Ver el vídeo",
-    "growth.share.content26.title": "World-class investors believe Origin will disrupt the sharing economy",
+    "growth.share.content26.title": "Inversores de clase mundial creen que Origin interrumpirá la economía compartida",
     "growth.share.content26.details": "Origin cuenta con más de 500 inversores en todo el mundo que respaldan la visión de habilitar el verdadero comercio P2P.",
     "growth.share.content26.link": "Ver el vídeo",
-    "growth.share.content27.title": "Fortune Magazine's Balancing the Ledger with Origin's Founders",
-    "growth.share.content27.details": "In this interview with Fortune Magazine, Origin's founders discuss their vision for creating a truly decentralized sharing economy.",
+    "growth.share.content27.title": "Equilibrio del libro mayor de la revista Fortune con los fundadores de Origin",
+    "growth.share.content27.details": "En esta entrevista con la revista Fortune, los fundadores de Origin discuten su visión para crear una economía compartida verdaderamente descentralizada.",
     "growth.share.content27.link": "Ver el vídeo",
-    "growth.share.content28.title": "YouTube Founder and Origin Investor Discusses Strength of Origin Team",
+    "growth.share.content28.title": "El fundador e inversor de Origin de YouTube analiza el equipo de Fuerza de Origin",
     "growth.share.content28.details": "Steve Chen, cofundador de YouTube, habla sobre la fortaleza del equipo de Origin.",
     "growth.share.content28.link": "Ver el vídeo",
-    "growth.share.content29.title": "PayPal Cofounder & First YouTube Engineer Talks About His Work at Origin",
-    "growth.share.content29.details": "Meet Yu Pan: PayPal's Co-founder, first YouTube engineer and now lead R&D engineer at Origin.",
+    "growth.share.content29.title": "Cofundador de PayPal y primer ingeniero de YouTube habla sobre su trabajo en Origin",
+    "growth.share.content29.details": "Conozca a Yu Pan: cofundador de PayPal, primer ingeniero de YouTube y ahora ingeniero principal de I&D en Origin.",
     "growth.share.content29.link": "Ver el vídeo",
-    "growth.share.content30.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
-    "growth.share.content30.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content30.title": "Paul Veradittakit de Pantera Capital sobre cómo el Origin permite la libertad",
+    "growth.share.content30.details": "Oficial de coinversión en Pantera Capital.",
     "growth.share.content30.link": "Ver el vídeo",
-    "growth.share.content31.title": "The Future of the Sharing Economy",
-    "growth.share.content31.details": "Origin is building the future of the sharing economy.",
+    "growth.share.content31.title": "El futuro de la economía colaborativa",
+    "growth.share.content31.details": "Origin está construyendo el futuro de la economía colaborativa.",
     "growth.share.content31.link": "Ver el vídeo",
-    "growth.share.content32.title": "Follow Origin on Blockfolio Signal!",
-    "growth.share.content32.details": "Follow Origin on Blockfolio and receive the latest news updates and OGN airdrops from Origin's core team. ",
-    "growth.share.content32.link": "Follow Origin",
+    "growth.share.content32.title": "¡Siga Origin en Blockfolio Signal!",
+    "growth.share.content32.details": "Siga Origin en Blockfolio y reciba las últimas actualizaciones del equipo principal de Origin. ",
+    "growth.share.content32.link": "Seguir Origin",
     "growth.share.content33.title": "Únete al Telegram de Origin y gana OGN",
-    "growth.share.content33.details": "Follow Origin on Telegram and earn Origin Tokens (OGN)!",
-    "growth.share.content33.link": "Follow Origin",
-    "growth.share.content34.title": "Creating the New Sharing Economy",
+    "growth.share.content33.details": "¡Sigue a Origin en Telegram y gana tokens de Origin gratis!",
+    "growth.share.content33.link": "Seguir Origin",
+    "growth.share.content34.title": "Creando la nueva economía compartida",
     "growth.share.content34.details": "Origin ha creado un protocolo de mercado descentralizado en la red principal ethereum que reemplaza a los intermediarios y conecta a compradores y vendedores con un contrato inteligente.",
-    "growth.share.content34.link": "Follow Origin"
+    "growth.share.content34.link": "Seguir Origin"
   },
   "3eD99i": "Verifique su dirección de correo electrónico",
   "1hBrwm": "Agregar nombre y foto al perfil",
@@ -371,7 +372,7 @@
   "4qOByY": "Ganado",
   "3lytDE": "DESTACADOS",
   "2dj9Ax": "Descargue la aplicación Origin Marketplace",
-  "3mDuJu": "Install & complete 4 verifications.",
+  "3mDuJu": "Instalar y completar 4 verificaciones.",
   "14jidi": "Compartir este",
   "1jzK6G": "No se detectaron campañas",
   "1bzhfq": "No se ha encontrado ninguna campaña activa",
@@ -680,12 +681,12 @@
   "4FezaJ": "Fichas ganadas",
   "2haWvO": "Ganancias Totales",
   "1YUe0g": "Total de Ganancias",
-  "uKsWN": "Campaign Ended",
-  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
-  "1CZFEM": "Read our {blog post}.",
-  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
+  "uKsWN": "Campaña Finalizada",
+  "4fO8ds": "El presupuesto establecido para ésta campaña ha sido alcanzado. No estarán disponibles más tokens para ganar por ésta campaña.",
+  "1CZFEM": "Lee nuestro {blog post}.",
+  "3xu4iO": "Para obtener las últimas actualizaciones sobre los Premios de Origin, {joinTelegram}.",
   "2tRIOg": "No se detectaron campañas",
-  "3Dcwum": "Origin Marketplace installed",
+  "3Dcwum": "Origen Marketplace instalado",
   "Nuz99": "Referecia de compañero",
   "acQDS": "Completado",
   "2JJkHr": "Ganaste {amount} OGN",
@@ -695,9 +696,9 @@
   "2LLInS": "Terminado",
   "2iDrtJ": "Únase a mí en Origin y gane fichas de criptomoneda de origen (OGN). Origin es un nuevo mercado para comprar y vender con otros usuarios. Gane fichas de Origen cuando cree su perfil, invite a sus amigos y compre y venda en el mercado.",
   "1gCRzk": "Únase a mí en Origin y gane fichas de criptomoneda de origen (OGN). Origin es un nuevo mercado para comprar y vender con otros usuarios. Gane fichas de Origen cuando cree su perfil, invite a sus amigos y compre y venda en el mercado.",
-  "1URGr": "Invite with Your Link",
-  "1JZLkm": "Send a friend your unique invitation link.",
-  "2FPhdN": "Copy Link",
+  "1URGr": "Invita con tu código",
+  "1JZLkm": "Envíe a un amigo su código de invitación único.",
+  "2FPhdN": "Copiar link",
   "1IIvYE": "Copiado",
   "20US5L": "Dupdo",
   "3yCrcG": "Compartir o Tweet",
@@ -748,16 +749,13 @@
   "18RyVa": "Fortalece tu perfil y gana tokens de origen completando verificaciones.",
   "wp2vP": "Terminado",
   "vVUtP": "Bienvenido a Origin Protocol",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Tu amigo {name} ha invitado a unirte a Origin",
-  "3DGyPu": "Origin Tokens",
+  "3Tm04Z": "Top Prize",
+  "3DGyPu": "Fichas de Origin",
   "45NvfT": "Resgistrate ahora",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "o",
-  "3LJKn0": "Ganar desde la computador",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Recompensas de origen",
   "3gLqI4": "Únete a la campaña",
   "PhK4s": "Términos de Recompensas de Origin",
@@ -769,10 +767,10 @@
   "1R5Tqk": "Aceptar los terminos",
   "4DsgoB": "Regístrese para recibir Recompensas de Origin",
   "1oOkt7": "Únase al programa de recompensas de Origin para ganar tokens de origen (OGN). Los términos y Condiciones aplican.",
-  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
+  "VWMI": "La OGN obtenida se distribuirá al final de cada campaña a exclusivo criterio de Origin.",
   "4weJUD": "Al unirse al programa de recompensas de Origin, acepta que no transferirá ni venderá tokens de Origin ganados en el futuro a otros por al menos 1 año desde la fecha de obtención de sus tokens.",
   "4vRJSg": "OGN se emiten en una transacción originalmente exenta de registro bajo la Ley de Valores de los Estados Unidos de 1933, según enmendada (la \"Ley de Valores\"), y no pueden transferirse en los Estados Unidos a, o para la cuenta o beneficio de, ningún Estado de los Estados Unidos. persona, excepto en virtud de una exención disponible de los requisitos de registro de la Ley de Valores y todas las leyes estatales de valores aplicables. Los términos utilizados anteriormente tienen el significado que se les da en la Regulación S bajo la Ley de Valores y todas las leyes y regulaciones aplicables.",
-  "1oPDxX": "I am not a citizen or resident of the United States of America",
+  "1oPDxX": "No soy ciudadano ni residente de los Estados Unidos de América",
   "1c8jIG": "Acepto los términos y condiciones",
   "3ARgQ2": "Vaya, {country} no es elegible",
   "1gZxpn": "Desafortunadamente, parece que actualmente se encuentra en un país donde las regulaciones gubernamentales no le permiten participar en las Campañas de Origen.",
@@ -839,10 +837,10 @@
   "1iXhvu": "Verifica tu numero de telefono",
   "1OUJhq": "Ingrese el código que le enviamos a continuación",
   "jNcvI": "Le enviamos un código de verificación por SMS. Por favor ingréselo abajo",
-  "MdVoC": "Failed to verify status. Please try again.",
+  "MdVoC": "No se pudo verificar el estado. Inténtalo de nuevo.",
   "2PjJHN": "Verificar Cuenta",
   "4hTtL9": "Verifique su cuenta de Telegram",
-  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
+  "2gEaQA": "La verificación de Telegram solo está disponible a través de la aplicación Origin Marketplace.",
   "2KQpoG": "Nunca publicaremos en su nombre.",
   "2Ezyas": "¿Qué será visible en la cadena de bloques?",
   "44w6ur": "Su nombre de usuario de Telegram y su ID de cuenta",
@@ -867,7 +865,7 @@
   "4zUJH3": "No hay suficientes fichas de origen",
   "4Ed2iA": "No hay suficientes tokens OKB. {=Get More}",
   "4DOKEk": "Obtener más",
-  "3as9PZ": "Not enough Tether",
+  "3as9PZ": "Ethereum insuficiente",
   "49t4a6": "No hay suficiente equilibrio",
   "2t43zy": "¿Donde puedo conseguir algunos?",
   "2nApoY": "Comisión",
@@ -998,6 +996,7 @@
   "CIXm3": "No has iniciado una conversación con este usuario.",
   "PESUQ": "Cerrar",
   "1d5eDn": "Escribe algo...",
+  "1bFDvA": "Sending...",
   "K46gs": "Enviar",
   "349RB": "Conectado a",
   "4j25sQ": "Cartera activa",
@@ -1128,7 +1127,7 @@
   "2dbJQ2": "No podrá ganar OGN en Origin, pero aún puede verificar su perfil.",
   "BfHYB": "Estoy seguro",
   "eXPPI": "No, espera",
-  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
+  "2sDCiE": "¡Ya casi estás ahí! Regístrese para comenzar a ganar sus tokens.",
   "2vReMp": "Gane tokens de origen (OGN) fortaleciendo su perfil y completando tareas en Origin Marketplace.",
   "3JfvSq": "¡Si! Inscríbeme",
   "wcJnW": "No, gracias",
@@ -1179,7 +1178,7 @@
   "1kwp9A": "Servidor GraphQL",
   "1uARmt": "Servidor de claves de mensajería",
   "CekKD": "Espacio de nombres de mensajería",
-  "439xvd": "Auth Server",
+  "439xvd": "Servidor de autenticación",
   "28zT3p": "Modo de desempeño",
   "1gHMka": "Consola de pantalla",
   "Dg7k9": "Cuentas Proxy",
@@ -1190,7 +1189,7 @@
   "pT9j": "Retenida",
   "NrhOS": "Liberar",
   "QUO1v": "Cantidad",
-  "1uAeN3": "Offer Value",
+  "1uAeN3": "Fecha de oferta",
   "47deji": "El éter es altamente volátil y su valor puede cambiar significativamente en un corto período de tiempo.",
   "avBAh": "Valor actual",
   "2YJu95": "Estado",
@@ -1301,9 +1300,9 @@
   "3szOog": "Detalles de la transacción",
   "2WKBdJ": "Mis Ventas",
   "4sERIr": "Mis Compras",
-  "4xRYON": "You haven’t bought anything yet.",
-  "2Q96aI": "Browse Listings",
-  "3rqoGs": "{time} ago",
+  "4xRYON": "Usted no ha comprado nada todavía.",
+  "2Q96aI": "Cerrar Listado",
+  "3rqoGs": "Hace {time}",
   "1OTyrm": "Oferta hecha en",
   "1qsiOA": "Todos",
   "3I5PI0": "Activos",
@@ -1391,10 +1390,10 @@
   "3M0Mkc": "Maker Dai",
   "3NuPlb": "Token de origen",
   "1w0kdV": "Token OKB",
-  "3mFmPe": "Tether",
+  "3mFmPe": "Atar",
   "3JTZtf": "El éter es bueno para los listados a corto plazo.",
   "3eoCca": "Maker Dai es bueno para listados a largo plazo como alquileres o ventas de propiedades.",
   "214S0w": "Útil para promocionar otros listados",
   "4nb5Gu": "Para usar con uno de nuestros socios de intercambio",
-  "21iAlm": "Tether is good for long term listings like rentals or property sales."
+  "21iAlm": "Maker Dai es bueno para listados a largo plazo como alquileres o ventas de propiedades."
 }
