--- a/shah/translations/fil_PH.json
+++ b/shah/translations/fil_PH.json
@@ -104,7 +104,7 @@
   "2idJzM": "Ang Metamask icon ay matatagpuan sa kanang tuktok ng tool bar ng iyong browser.",
   "32hLtQ": "Binabati kita! Maaari mo na ngayong mensahe ng iba pang mga gumagamit sa Pinagmulan at manatiling napapanahon sa lahat ng iyong mga pagbili at mga benta.",
   "AACIs": "Tapos ka na at maaaring magpatuloy sa pamamagitan ng pagpindot sa pindutan sa ibaba.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Enero 2019 Kampanya",
     "growth.jan2019.short_name": "Jan 2019",
     "growth.feb2019.name": "Pebrero 2019 Kampanya",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "Na-verify na email at Pinagmulan ng profile",
     "growth.two.attestations.requirement": "Tatlong mga pagpapatunay ng profile",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "Palakasin ang iyong profile at kumita ng Mga Pinagmulan na Token sa pamamagitan ng pagkumpleto ng mga pag-verify.",
   "wp2vP": "Nakumpleto",
   "vVUtP": "Maligayang pagdating sa Pinagmulang Protocol",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Mga Gantimpala ng Pinagmulan",
   "3gLqI4": "Sumali sa Kampanya",
   "PhK4s": "Mga Tuntunin sa Mga Gantimpala ng Mga Gantimpala",
@@ -998,6 +996,7 @@
   "CIXm3": "Hindi mo pa sinimulan ang isang pag-uusap sa gumagamit na ito",
   "PESUQ": "Isara",
   "1d5eDn": "Mag-type ng isang bagay...",
+  "1bFDvA": "Sending...",
   "K46gs": "Ipadala",
   "349RB": "Nakakonekta sa",
   "4j25sQ": "Aktibong pitaka",
