--- a/shah/translations/hr_HR.json
+++ b/shah/translations/hr_HR.json
@@ -104,7 +104,7 @@
   "2idJzM": "Ikona Metamask nalazi se u gornjem desnom kutu alatne trake preglednika.",
   "32hLtQ": "Čestitamo! Sada možete obavijestiti druge korisnike o nastanku i ostati u tijeku sa svim svojim kupnjama i prodajom.",
   "AACIs": "Gotovi ste i možete nastaviti pritiskom na gumb ispod.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Kampanja u siječnju 2019. godine",
     "growth.jan2019.short_name": "Siječnja 2019",
     "growth.feb2019.name": "Kampanja veljače 2019. godine",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "Potvrđena adresa e-pošte i profil porijekla",
     "growth.two.attestations.requirement": "Tri provjere profila",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "Ojačajte svoj profil i zaradite tokene izvornika dovršavanjem provjera.",
   "wp2vP": "dovršen",
   "vVUtP": "Dobro došli u Protokol o podrijetlu",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Origin Rewards",
   "3gLqI4": "Pridružite se kampanji",
   "PhK4s": "Uvjeti nagrađivanja",
@@ -998,6 +996,7 @@
   "CIXm3": "Niste započeli razgovor s ovim korisnikom",
   "PESUQ": "Zatvoriti",
   "1d5eDn": "Upišite nešto ...",
+  "1bFDvA": "Sending...",
   "K46gs": "Poslati",
   "349RB": "Spojen na",
   "4j25sQ": "Aktivni novčanik",
