--- a/shah/translations/nl_NL.json
+++ b/shah/translations/nl_NL.json
@@ -104,7 +104,7 @@
   "2idJzM": "Het Metamask-pictogram bevindt zich rechtsboven in de browserwerkbalk.",
   "32hLtQ": "Gefeliciteerd! Je kunt nu andere gebruikers op Origin laten weten en op de hoogte blijven van al je aankopen en verkopen.",
   "AACIs": "U bent klaar en kunt doorgaan door op de onderstaande knop te drukken.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "2019 campagne",
     "growth.jan2019.short_name": "Januari 2019",
     "growth.feb2019.name": "Februari 2019 Campagne",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "Geverifieerd e-mailadres en herkomstprofiel",
     "growth.two.attestations.requirement": "Drie profielverificaties",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "Versterk je profiel en verdien Origin-tokens door verificaties te voltooien.",
   "wp2vP": "Voltooid",
   "vVUtP": "Welkom bij Origin Protocol",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Oorsprong Beloningen",
   "3gLqI4": "Neem deel aan de campagne",
   "PhK4s": "Origin Rewards-voorwaarden",
@@ -998,6 +996,7 @@
   "CIXm3": "U bent nog geen gesprek met deze gebruiker gestart",
   "PESUQ": "Dichtbij",
   "1d5eDn": "Typ hier iets...",
+  "1bFDvA": "Sending...",
   "K46gs": "Sturen",
   "349RB": "Verbonden met",
   "4j25sQ": "Actieve portemonnee",
