--- a/shah/translations/pt_PT.json
+++ b/shah/translations/pt_PT.json
@@ -104,7 +104,7 @@
   "2idJzM": "O ícone do Metamask está localizado no canto superior direito da barra de ferramentas do navegador.",
   "32hLtQ": "Parabéns! Agora você pode enviar mensagens para outros usuários no Origin e manter-se atualizado com todas as suas compras e vendas.",
   "AACIs": "Você está pronto e pode continuar pressionando o botão abaixo.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Campanha de janeiro de 2019",
     "growth.jan2019.short_name": "Jan 2019",
     "growth.feb2019.name": "Campanha de fevereiro de 2019",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "E-mail confirmado e perfil de origem",
     "growth.two.attestations.requirement": "Três verificações de perfil",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "Fortaleça seu perfil e ganhe Tokens de Origem concluindo as verificações.",
   "wp2vP": "Concluído",
   "vVUtP": "Bem vindo ao Protocolo de Origem",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Recompensas de origem",
   "3gLqI4": "Participar da campanha",
   "PhK4s": "Termos do Origin Rewards",
@@ -998,6 +996,7 @@
   "CIXm3": "Você não iniciou uma conversa com este usuário",
   "PESUQ": "Perto",
   "1d5eDn": "Digite algo...",
+  "1bFDvA": "Sending...",
   "K46gs": "Mandar",
   "349RB": "Conectado a",
   "4j25sQ": "Carteira ativa",
