--- a/shah/translations/th_TH.json
+++ b/shah/translations/th_TH.json
@@ -104,7 +104,7 @@
   "2idJzM": "ไอคอน Metamask ตั้งอยู่ที่ด้านบนขวาของแถบเครื่องมือเบราว์เซอร์ของคุณ",
   "32hLtQ": "ขอแสดงความยินดี! ตอนนี้คุณสามารถส่งข้อความถึงผู้ใช้คนอื่นบน Origin และติดตามข่าวสารเกี่ยวกับการซื้อและการขายทั้งหมดของคุณ",
   "AACIs": "คุณทำเสร็จแล้วและสามารถดำเนินการต่อได้โดยกดปุ่มด้านล่าง",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "แคมเปญมกราคม 2562",
     "growth.jan2019.short_name": "ม.ค. 2019",
     "growth.feb2019.name": "แคมเปญกุมภาพันธ์ 2019",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "ยืนยันอีเมลและโปรไฟล์ Origin แล้ว",
     "growth.two.attestations.requirement": "การตรวจสอบสามโปรไฟล์",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "เสริมสร้างโปรไฟล์ของคุณและรับ Origin Tokens โดยดำเนินการยืนยันให้เสร็จ",
   "wp2vP": "เสร็จ",
   "vVUtP": "ยินดีต้อนรับสู่ Origin Protocol",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "แหล่งกำเนิดรางวัล",
   "3gLqI4": "เข้าร่วมแคมเปญ",
   "PhK4s": "เงื่อนไขการให้รางวัลแหล่งกำเนิด",
@@ -998,6 +996,7 @@
   "CIXm3": "คุณยังไม่ได้เริ่มการสนทนากับผู้ใช้รายนี้",
   "PESUQ": "ปิด",
   "1d5eDn": "พิมพ์บางอย่าง...",
+  "1bFDvA": "Sending...",
   "K46gs": "ส่ง",
   "349RB": "เชื่อมต่อกับ",
   "4j25sQ": "กระเป๋าเงินที่ใช้งานอยู่",
