--- a/shah/translations/tr_TR.json
+++ b/shah/translations/tr_TR.json
@@ -104,7 +104,7 @@
   "2idJzM": "Metamask simgesi, tarayıcı araç çubuğunun sağ üst köşesinde bulunur.",
   "32hLtQ": "Tebrikler! Artık Origin'deki diğer kullanıcılara mesaj atabilir ve tüm alım satımlarınızla ilgili güncel bilgiler alabilirsiniz.",
   "AACIs": "Tamamlandı ve aşağıdaki düğmeye basarak devam edebilirsiniz.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Ocak 2019 Kampanyası",
     "growth.jan2019.short_name": "Ocak 2019",
     "growth.feb2019.name": "Şubat 2019 Kampanyası",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "Doğrulanmış e-posta ve Menşe profili",
     "growth.two.attestations.requirement": "Üçüncü profil doğrulaması",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "Profilinizi güçlendirin ve doğrulamaları tamamlayarak Origin Tokens kazanın.",
   "wp2vP": "Tamamlandı",
   "vVUtP": "Menşe Protokolüne Hoş Geldiniz",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Kökeni Ödülleri",
   "3gLqI4": "Kampanyaya Katıl",
   "PhK4s": "Menşe Ödül Koşulları",
@@ -998,6 +996,7 @@
   "CIXm3": "Bu kullanıcıyla bir konuşma başlatmadınız",
   "PESUQ": "Kapat",
   "1d5eDn": "Birşeyler yaz...",
+  "1bFDvA": "Sending...",
   "K46gs": "göndermek",
   "349RB": "Bağlı",
   "4j25sQ": "Aktif cüzdan",
