--- a/shah/translations/uk_UA.json
+++ b/shah/translations/uk_UA.json
@@ -104,7 +104,7 @@
   "2idJzM": "Значок Metamask розташований у верхньому правому куті панелі інструментів веб-переглядача.",
   "32hLtQ": "Вітаємо! Тепер ви можете надсилати повідомлення іншим користувачам про Origin і залишатися в курсі всіх ваших покупок і продажів.",
   "AACIs": "Ви закінчили і можете продовжити, натиснувши кнопку нижче.",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "Кампанія в січні 2019 року",
     "growth.jan2019.short_name": "Січня 2019",
     "growth.feb2019.name": "Акція лютого 2019 року",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "December 2019",
     "growth.jan2020.name": "January 2020 Campaign",
     "growth.jan2020.short_name": "January 2020",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "Підтверджена електронна пошта й профіль Origin",
     "growth.two.attestations.requirement": "Три перевірки профілю",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -748,16 +749,13 @@
   "18RyVa": "Зміцнюйте свій профіль і заробляйте початкові маркери, виконавши перевірки.",
   "wp2vP": "Завершено",
   "vVUtP": "Ласкаво просимо до протоколу походження",
-  "2rolpt": "Join Origin Rewards to earn",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
   "2UiHlq": "Your friend {name} has invited you to earn",
+  "3Tm04Z": "Top Prize",
   "3DGyPu": "Origin Tokens",
   "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Origin Rewards",
   "3gLqI4": "Приєднуйтесь до кампанії",
   "PhK4s": "Умови нагородження",
@@ -998,6 +996,7 @@
   "CIXm3": "Ви не розпочали розмову з цим користувачем",
   "PESUQ": "Закрити",
   "1d5eDn": "Введіть щось ...",
+  "1bFDvA": "Sending...",
   "K46gs": "Надіслати",
   "349RB": "Пов'язаний з",
   "4j25sQ": "Активний гаманець",
