--- a/shah/translations/zh_CN.json
+++ b/shah/translations/zh_CN.json
@@ -104,7 +104,7 @@
   "2idJzM": "Metamask 图标在浏览器工具栏的右上角。",
   "32hLtQ": "恭喜！您现在可以在 Origin 上向其他用户发送消息，并跟踪您所有购买和销售情况。",
   "AACIs": "已完成，请点击下面的按钮继续。",
-  "4rLaB4": {
+  "4n4VIE": {
     "growth.jan2019.name": "2019年1月活动",
     "growth.jan2019.short_name": "2019年1月",
     "growth.feb2019.name": "2019年2月活动",
@@ -131,6 +131,7 @@
     "growth.dec2019.short_name": "2019年12月",
     "growth.jan2020.name": "2020年1月活动",
     "growth.jan2020.short_name": "2020年1月",
+    "growth.feb2020.short_name": "February 2020",
     "growth.profile.and.email.requirement": "已验证电子邮件和 Origin 个人资料",
     "growth.two.attestations.requirement": "3个个人信息验证",
     "growth.three.attestations.requirement": "四项身份认证",
@@ -294,16 +295,16 @@
     "growth.share.content20.details": "CoinList的联合创始人兼总裁Andy Bromberg讨论了他对Origin的看法以及我们的长期愿景。",
     "growth.share.content20.link": "观看视频",
     "growth.share.content21.title": "建立在Origin上：去中心化的的Shopify替代产品",
-    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.details": "我们很高兴宣布Origin电子商店的推出，一个类似于Shopify，基于IPFS的去中心化的和开源的产品。",
     "growth.share.content21.link": "阅读文章",
     "growth.share.content22.title": "一位YouTube早期员如何与Uber和Airbnb竞争",
     "growth.share.content22.details": "我们的联合创始人Matthew Liu与Encrypted Podcast的联合创始人Ahmed Al-Balaghi对话。",
     "growth.share.content22.link": "观看视频",
-    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.title": "宣布允许卖家推广商品服务列表的Origin佣金计划",
     "growth.share.content23.details": "Origin佣金计划：帮助卖家增加销售和DApp开发人员和允许联盟营销人员赚取Origin代币的新方式。",
     "growth.share.content23.link": "阅读文章",
     "growth.share.content24.title": "Pantera Capital的Paul Veradittakit谈论Origin如何实现自由",
-    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.details": "Pantera Capital 联合首席投资官，Paul。",
     "growth.share.content24.link": "观看视频",
     "growth.share.content25.title": "Augur的联合创始人Joey Krug阐述Origin的价值",
     "growth.share.content25.details": "Pantera Capital的共同投资官和Augur联合创始人Joey Krug解释Origin的价值。",
@@ -311,17 +312,17 @@
     "growth.share.content26.title": "世界级的投资者认为Origin将为共享经济带来破坏式的创新",
     "growth.share.content26.details": "Origin目前在全世界有500多家投资方来支持实现真正的P2P商业的愿景",
     "growth.share.content26.link": "观看视频",
-    "growth.share.content27.title": "Fortune Magazine's Balancing the Ledger with Origin's Founders",
-    "growth.share.content27.details": "In this interview with Fortune Magazine, Origin's founders discuss their vision for creating a truly decentralized sharing economy.",
+    "growth.share.content27.title": "《Fortune》杂志的《Balancing the Ledger》：与Origin的联合创始人",
+    "growth.share.content27.details": "在《财富》杂志的这期采访中，我们邀请Origin的创始人一起聊聊Origin“创造真正去中心化共享经济”的愿景。",
     "growth.share.content27.link": "观看视频",
-    "growth.share.content28.title": "YouTube Founder and Origin Investor Discusses Strength of Origin Team",
+    "growth.share.content28.title": "YouTube和Origin的创始人探讨Origin团队的优势",
     "growth.share.content28.details": "Youtube创始人之一的Steve Chen讨论Origin团队的强项.",
     "growth.share.content28.link": "观看视频",
     "growth.share.content29.title": "Paypal创始人之一和YouTube第一位工程师谈论Origin",
-    "growth.share.content29.details": "Meet Yu Pan: PayPal's Co-founder, first YouTube engineer and now lead R&D engineer at Origin.",
+    "growth.share.content29.details": "潘宇是PayPal的联合创始人，也是YouTube的第一位工程师，现在他正在领导Origin的开发团队。",
     "growth.share.content29.link": "观看视频",
     "growth.share.content30.title": "Pantera Capital的Paul Veradittakit谈论Origin如何实现自由",
-    "growth.share.content30.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content30.details": "Pantera Capital 联合首席投资官，Paul。",
     "growth.share.content30.link": "观看视频",
     "growth.share.content31.title": "共享经济的未来",
     "growth.share.content31.details": "Origin正在建立未来的共享经济。",
@@ -408,7 +409,7 @@
   "48NbPX": "了解更多",
   "1fBJTw": "发送",
   "2EjJhq": "您尚未登录",
-  "2eOq3t": "Get secure access to your data by signing with your private key",
+  "2eOq3t": "通过使用私钥签名安全地访问数据",
   "2CPasx": "加载中...",
   "136kFa": "登陆",
   "3KIuu2": "您购买了一个列表",
@@ -454,7 +455,7 @@
   "3RWPjE": "如果您有任何疑问或需要对交易提出异议， {=let us know}。",
   "1cDNp2": "请通知我们",
   "2aLpDM": "知道了。",
-  "27amK4": "Help, settings, & more",
+  "27amK4": "帮助，设置，更多",
   "37CWGX": "关闭",
   "24XkI": "Origin实现真正的点对点商业",
   "1jPEbl": "© Origin Protocol, Inc.",
@@ -464,7 +465,7 @@
   "3rymEt": "关于 Origin",
   "4hHFe9": "创建一个市场",
   "b9M5L": "设置",
-  "3bazax": "Help",
+  "3bazax": "帮助",
   "dYIUq": "立即赚取 Origin 代币",
   "2cup7z": "参与我们的奖励活动并在我们的 DApp 上完成一些动作即可获得 Origin Tokens。",
   "3PLxx0": "开始",
@@ -680,13 +681,13 @@
   "4FezaJ": "代币赚了",
   "2haWvO": "总收入",
   "1YUe0g": "赚取总额",
-  "uKsWN": "Campaign Ended",
-  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
-  "1CZFEM": "Read our {blog post}.",
-  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
+  "uKsWN": "活动已结束",
+  "4fO8ds": "此次活动的的OGN已经分配完毕，已经没有其他的OGN可以领取了。\n",
+  "1CZFEM": "阅读我们的 {blog post}。",
+  "3xu4iO": "获取Origin 奖励的最新资讯，{joinTelegram}。",
   "2tRIOg": "目前没有奖励活动",
   "3Dcwum": "已安装Origin Marketplace",
-  "Nuz99": "Partner Referral",
+  "Nuz99": "邀请",
   "acQDS": "已完成",
   "2JJkHr": "您已赚取{amount}OGN",
   "1dhANo": "关注Origin",
@@ -695,8 +696,8 @@
   "2LLInS": "已完成",
   "2iDrtJ": "我想邀请您注册使用 Origin 并开始赚取 Origin 代币 (OGN)。Origin 是一个新的电商平台。当您创建个人资料，邀请好友或在平台上进行买卖，都可以赚取 Origin 代币。",
   "1gCRzk": "我想邀请您注册使用 Origin 并开始赚取 Origin 代币 (OGN)。Origin 是一个新的电商平台。当您创建个人资料，邀请好友或在平台上进行买卖，都可以赚取 Origin 代币。",
-  "1URGr": "Invite with Your Link",
-  "1JZLkm": "Send a friend your unique invitation link.",
+  "1URGr": "通过邀请链接邀请好友",
+  "1JZLkm": "将特定的邀请链接发给朋友",
   "2FPhdN": "复制链接",
   "1IIvYE": "已复制",
   "20US5L": "复制",
@@ -748,16 +749,13 @@
   "18RyVa": "加强你的个人资料，并通过完成验证获取Origin代币。",
   "wp2vP": "已完成",
   "vVUtP": "欢迎使用 Origin Protocol",
-  "2rolpt": "Join Origin Rewards to earn",
-  "2UiHlq": "Your friend {name} has invited you to earn",
-  "3DGyPu": "Origin Tokens",
-  "45NvfT": "Sign Up Now",
-  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
-  "1EEJqF": "Scan to install our app",
-  "VIbSQ": "or",
-  "3LJKn0": "Earn From Desktop",
-  "q02iR": "What are Origin Rewards?",
-  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
+  "2N8D8z": "Join Origin Rewards and make a purchase for a chance to win OGN prizes.",
+  "2UiHlq": "好友{name} 邀请您赚取OGN",
+  "3Tm04Z": "Top Prize",
+  "3DGyPu": "Origin通证",
+  "45NvfT": "立即注册",
+  "tKod8": "OGN is a cryptocurrency that can be used to buy and sell anything in the Origin Marketplace.",
+  "2pghzw": "Sign Up for Origin Rewards",
   "4jRz2r": "Origin 奖励计划",
   "3gLqI4": "参与活动",
   "PhK4s": "Origin 奖励计划",
@@ -769,10 +767,10 @@
   "1R5Tqk": "接受条款",
   "4DsgoB": "注册参加Origin奖励活动",
   "1oOkt7": "参与 Origin 奖励计划以获得 Origin 代币（OGN）。Origin 奖励计划将受相关条款与条件的约束。",
-  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
+  "VWMI": "每次活动结束的时候，赚取的OGN将会按照条款条规由Origin分发。",
   "4weJUD": "加入Origin奖励活动后，你将同意从你获得Origin代币的日期开始将不会转账或者出售已经获得的Origin代币至少一年。",
   "4vRJSg": "OGN根据遵守《美国证券法》（1933）修正后的交易（“证券法”）的情况下发行，并不得在美国转账或为任何美国人的帐户或利益转让，除非根据《证券法》和所有适用州证券法的注册要求豁免。以上术语具有《证券法》S条例和所有适用法律法规赋予它们的含义。",
-  "1oPDxX": "I am not a citizen or resident of the United States of America",
+  "1oPDxX": "我不是美国公民或居民。",
   "1c8jIG": "我接受以上的条款和条件",
   "3ARgQ2": "抱歉，{country} 不能参与这项活动",
   "1gZxpn": "抱歉，看起来您目前所在的国家政府法规不允许您参与 Origin 奖励活动。",
@@ -839,10 +837,10 @@
   "1iXhvu": "验证您的电话号码",
   "1OUJhq": "请输入我们发送给您的验证码",
   "jNcvI": "我们已经通过短信向您发送了验证码。请在下面输入",
-  "MdVoC": "Failed to verify status. Please try again.",
+  "MdVoC": "无法验证状态，请再试一次",
   "2PjJHN": "验证账号",
   "4hTtL9": "验证您的电报账号",
-  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
+  "2gEaQA": "电报群验证只能通过Origin市场APP验证。",
   "2KQpoG": "我们将永远不会代表您发布",
   "2Ezyas": "区块链上会显示什么哪些数据？",
   "44w6ur": "您的Telegram账号用户名和ID",
@@ -998,6 +996,7 @@
   "CIXm3": "您尚未与该用户开始进行对话",
   "PESUQ": "关",
   "1d5eDn": "输入一点什么",
+  "1bFDvA": "Sending...",
   "K46gs": "发送",
   "349RB": "连接到",
   "4j25sQ": "活跃钱包",
@@ -1027,7 +1026,7 @@
   "qUaej": "消息",
   "3e7Twf": "通知",
   "4yVyLH": "设置",
-  "2wfvdg": "Help",
+  "2wfvdg": "帮助",
   "3vGT5M": "控制台",
   "1k58ts": "更多",
   "40SIOC": "列表",
@@ -1058,7 +1057,7 @@
   "48V5Jr": "账户优点-{percent}",
   "36t26D": "赚钱OGN",
   "tHJmL": "钱包余额",
-  "3WKB6S": "Sign Out",
+  "3WKB6S": "退出",
   "2NvVVm": "买方:",
   "s1yRf": "卖方:",
   "4xWP3l": "{nameLink} 拒绝了你的出价 {title}",
@@ -1128,7 +1127,7 @@
   "2dbJQ2": "你将无法在 Origin 上赚取 OGN，但你仍然可以验证你的个人档案。",
   "BfHYB": "确定",
   "eXPPI": "不，等一下",
-  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
+  "2sDCiE": "即将完成，赶快注册赚取OGN吧。",
   "2vReMp": "通过加强您的个人资料并完成“Origin Marketplace”中的任务，赢取原Origin代币(OGN)。",
   "3JfvSq": "我要注册！",
   "wcJnW": "不用了，谢谢",
@@ -1179,7 +1178,7 @@
   "1kwp9A": "GraphQL 服务器",
   "1uARmt": "消息传递密钥服务器",
   "CekKD": "消息命名空间",
-  "439xvd": "Auth Server",
+  "439xvd": "身份验证服务器",
   "28zT3p": "性能模式",
   "1gHMka": "屏幕控制台",
   "Dg7k9": "代理账号",
@@ -1190,7 +1189,7 @@
   "pT9j": "托管中",
   "NrhOS": "已释放",
   "QUO1v": "金额",
-  "1uAeN3": "Offer Value",
+  "1uAeN3": "出价",
   "47deji": "以太币具有很大的波动性, 因此价值在短时间内可能会有很大的变化。",
   "avBAh": "现在的价值",
   "2YJu95": "状态",
@@ -1302,7 +1301,7 @@
   "2WKBdJ": "我的出售",
   "4sERIr": "已购商品",
   "4xRYON": "您还没有买任何东西。",
-  "2Q96aI": "Browse Listings",
+  "2Q96aI": "浏览商品列表",
   "3rqoGs": "{time} 前",
   "1OTyrm": "出价日期",
   "1qsiOA": "所有",
@@ -1396,5 +1395,5 @@
   "3eoCca": "Maker Dai 适用于长期的商品或服务列表，例如房屋租赁和房地产销售。",
   "214S0w": "有助于推广其他商品",
   "4nb5Gu": "与我们的交易所合作伙伴之一一起使用",
-  "21iAlm": "Tether is good for long term listings like rentals or property sales."
+  "21iAlm": "长期的商品例如房屋租赁或者房地产，比较适合用USDT或者DAI进行标价"
 }
